[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project settings -----------------------------------------------------------------------------------------------------
[project]
name = "ultralytics_custom"
dynamic = ["version"]
description = "Ultralytics YOLOv8 Custom additions."
requires-python = ">=3.8"

# Required dependencies ------------------------------------------------------------------------------------------------
dependencies = ["ultralytics"]

[project.scripts]
yolo-custom = "ultralytics_custom.cfg:entrypoint"

# Tools settings -------------------------------------------------------------------------------------------------------
[tool.setuptools]  # configuration specific to the `setuptools` build backend.
packages = { find = { where = ["."], include = ["ultralytics_custom", "ultralytics_custom.*"] } }

[tool.setuptools.dynamic]
version = { attr = "ultralytics_custom.__version__" }
